--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
+
     {% for recipe in recipes %}
-        {{ recipe.recipe_name}}<br>
-        {{ recipe.ingredients}}<br>
-        {{ recipe.method}}<br>
+        {{ recipe.recipe_name }}<br>
+        {{ recipe.ingredients }}<br>
+        {{ recipe.method }}<br>
     {% endfor %}
-</body>
-</html>
+    
+{% endblock %}
+
