--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,36 @@
     <title>Recipes</title>
 </head>
 <body>
+
+    <header>
+        <!-- Main Desktop nav bar menu -->
+        <nav class="nav-extended yellow darken-2">
+            <div class="nav-wrapper">
+                <a href="{{ url_for('get_recipes') }}" class="brand-logo">cogi</a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Home</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- Side menu for mobile and tablet devices-->
+        <ul class="sidenav" id="mobile-demo">
+                    <li><h4 class="center-align">cogi</h4></li>
+                    <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Home</a></li>
+        </ul>
+
+
+
+    </header>
+    
     {% block content %}
     {% endblock %}
     
