--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
                     <li><a href="{{ url_for('register') }}">Register</a></li>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="{{ url_for('login') }}">Log in</a></li>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Home</a></li>
                 </ul>
@@ -33,7 +33,7 @@
                     <li><h4 class="center-align">cogi</h4></li>
                     <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
                     <li><a href="{{ url_for('register') }}">Register</a></li>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="{{ url_for('login') }}">Log in</a></li>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Home</a></li>
         </ul>
