--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
                     <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
                     <li><a href="{{ url_for('register') }}">Register</a></li>
                     <li><a href="{{ url_for('login') }}">Log in</a></li>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="{{ url_for('profile', username=session['user']) }}">My Account</a></li>
                     <li><a href="#">Home</a></li>
                 </ul>
             </div>
@@ -34,7 +34,7 @@
                     <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
                     <li><a href="{{ url_for('register') }}">Register</a></li>
                     <li><a href="{{ url_for('login') }}">Log in</a></li>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="{{ url_for('profile', username=session['user']) }}">My Account</a></li>
                     <li><a href="#">Home</a></li>
         </ul>
 
