--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,26 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
 
-    {% for recipe in recipes %}
-        {{ recipe.recipe_name }}<br>
-        {{ recipe.ingredients }}<br>
-        {{ recipe.method }}<br>
-    {% endfor %}
-
     <div class="row">
-    <div class="col s12 m6">
-      <div class="card">
-        <div class="card-image">
-          <img src="images/sample-1.jpg">
-          <span class="card-title">Card Title</span>
-          <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="fas fa-plus"></i></a>
-        </div>
-        <div class="card-content">
-          <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-        </div>
-      </div>
+        {% for recipe in recipes %}
+            <div class="col-4">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="images/sample-1.jpg">
+                            <span class="card-title">{{ recipe.recipe_name }}</span>
+                            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="fas fa-plus"></i></a>
+                        </div>
+                        <div class="card-content">
+                            <p>{{ recipe.recipe_name }}</p>
+                        </div>
+                    </div>
+            </div>
+        {% endfor %}
     </div>
-  </div>
          
     
 {% endblock %}
