--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
                     <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
                     {% if session.user %}
                         <li><a href="{{ url_for('profile', username=session['user']) }}">My Account</a></li>
+                        <li><a href="{{ url_for('add_recipe') }}">Add recipe</a></li>
                         <li><a href="{{ url_for('logout') }}">Log out</a></li>
                     {% else %}
                         <li><a href="{{ url_for('register') }}">Register</a></li>
@@ -37,6 +38,7 @@
             <li><a href="{{ url_for('get_recipes') }}">Home</a></li>
                 {% if session.user %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">My Account</a></li>
+                    <li><a href="{{ url_for('add_recipe') }}">Add recipe</a></li>
                     <li><a href="{{ url_for('logout') }}">Log out</a></li>
                 {% else %}
                     <li><a href="{{ url_for('register') }}">Register</a></li>
