--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -4,7 +4,8 @@
     <h3 class="center-align">Create recipe</h3>
 
     <div class="row">
-        <form class="col s12" method="POST" action="">
+        <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
+            <!-- Recipe name input -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-utensils prefix"></i>
@@ -13,6 +14,7 @@
                     <label for="recipe_name">Recipe name</label>
                 </div>
             </div>
+            <!-- Ingredients -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-pepper-hot prefix"></i>
@@ -20,6 +22,7 @@
                     <label for="ingredients">Ingredients</label>
                 </div>
             </div>
+            <!-- Method text field -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-align-left prefix"></i>
@@ -27,18 +30,30 @@
                     <label for="method">Method</label>
                 </div>
             </div>
+            <!-- Time for cooking prep range selector -->
             <div class="row">
                 <p class="range-field col s12">
                 <input type="range" id="prep_time" name="prep_time" min="5" max="300" required/>
                 <label for="prep_time">Prep time (minutes)</label>
                 </p>
             </div>
+            <!-- Recipe type tags -->
             <div class="row">
                 <div class="chips chips-placeholder col s12">
                     <input class="custom-class">
                 </div>
             </div>
+            <!-- Submit button to create recipe -->
+            <div class="row">
+                <div class="col s12 center-align">
+                    <button class="btn waves-effect waves-light" type="submit">Create recipe
+                        <i class="fas fa-plus-square right"></i>
+                    </button>
+                </div>
+            </div>
         </form>
     </div>
+
+    
         
 {% endblock %}
