--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 
+    <h3 class="center-align">All recipes</h3>
+
     <div class="row">
         {% for recipe in recipes %}
-            <div class="col-4">
+            <div class="col s4">
                     <div class="card">
                         <div class="card-image">
                             <img src="images/sample-1.jpg">
@@ -12,6 +14,7 @@
                         </div>
                         <div class="card-content">
                             <p>{{ recipe.recipe_name }}</p>
+                            <p><em>Author: {{ recipe.created_by }}</em></p>
                         </div>
                     </div>
             </div>
