--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -15,6 +15,8 @@
                         <div class="card-content">
                             <p>{{ recipe.recipe_name }}</p>
                             <p><em>Author: {{ recipe.created_by }}</em></p>
+                            <a class="waves-effect waves-light btn-small">Edit</a>
+                            <a class="waves-effect waves-light btn-small light-green darken-1">View</a>
                         </div>
                     </div>
             </div>
