--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -15,7 +15,9 @@
                         <div class="card-content">
                             <p>{{ recipe.recipe_name }}</p>
                             <p><em>Author: {{ recipe.created_by }}</em></p>
-                            <a class="waves-effect waves-light btn-small">Edit</a>
+                            {% if session.user|lower == recipe.created_by|lower %}
+                                <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn-small">Edit</a>
+                            {% endif %}
                             <a class="waves-effect waves-light btn-small light-green darken-1">View</a>
                         </div>
                     </div>
