--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -17,6 +17,9 @@
                             <p><em>Author: {{ recipe.created_by }}</em></p>
                             {% if session.user|lower == recipe.created_by|lower %}
                                 <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn-small">Edit</a>
+                                <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-large">
+                                    Delete <i class="fas fa-times right"></i>
+                                </a>
                             {% endif %}
                             <a class="waves-effect waves-light btn-small light-green darken-1">View</a>
                         </div>
