--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -9,7 +9,6 @@
                     <div class="card">
                         <div class="card-image">
                             <img src="images/sample-1.jpg">
-                            <span class="card-title">{{ recipe.recipe_name }}</span>
                             <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="fas fa-plus"></i></a>
                         </div>
                         <div class="card-content">
@@ -21,7 +20,7 @@
                                     Delete <i class="fas fa-times right"></i>
                                 </a>
                             {% endif %}
-                            <a class="waves-effect waves-light btn-small light-green darken-1">View</a>
+                            <a href="{{ url_for('recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn-small light-green darken-1">View</a>
                         </div>
                     </div>
             </div>
