--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,7 +8,36 @@
                 <h3 class="center-align">
                     {{ username }}'s recipes
                 </h3>
-                placeholder - recipes created by user to be included here 
+            </div>
+            <div class="row">
+                    <div class="col s4">
+                        <div class="card">
+                                <div class="card-image">
+                                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="fas fa-plus"></i></a>
+                                    <a href="{{ url_for('add_recipe') }}" class="btn">Add recipe</a>
+                                </div>
+                        </div>
+                    </div>
+                {% for recipe in recipes %}
+                    {% if session.user|lower == recipe.created_by|lower %}
+                        <div class="col s4">
+                            <div class="card">
+                                <div class="card-image">
+                                    <img src="images/sample-1.jpg">
+                                </div>
+                                <div class="card-content">
+                                    <p>{{ recipe.recipe_name }}</p>
+                                    <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn-small">Edit</a>
+                                    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-large">
+                                            Delete <i class="fas fa-times right"></i>
+                                    </a>
+                                    <a href="{{ url_for('recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn-small light-green darken-1">View</a>
+                                </div>
+                            </div>
+                        </div>
+                    {% endif %}
+
+                {% endfor %}
             </div>
         </div>
     </div>
