--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -4,6 +4,14 @@
     <h3 class="center-align">All recipes</h3>
 
     <div class="row">
+            <div class="col s4">
+                        <div class="card">
+                                <div class="card-image">
+                                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="fas fa-plus"></i></a>
+                                    <a href="{{ url_for('add_recipe') }}" class="btn">Add recipe</a>
+                                </div>
+                        </div>
+            </div>
         {% for recipe in recipes %}
             <div class="col s4">
                     <div class="card">
