--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -21,6 +21,7 @@
                         </div>
                         <div class="card-content">
                             <p>{{ recipe.recipe_name }}</p>
+                            <p>Prep time: {{ recipe.prep_time }}</p>
                             <p><em>Author: {{ recipe.created_by }}</em></p>
                             {% if session.user|lower == recipe.created_by|lower %}
                                 <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn-small">Edit</a>
