--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -4,6 +4,8 @@
 
         <h1 class="center-align">{{ recipe.title }}</h1>
 
+        {{ recipe.prep_time }}
+
         <div class="row">
             <!-- Placeholder for image -->
             <div class="col-s12">
@@ -22,5 +24,20 @@
                 <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn">Delete Recipe</a>
             </div>
         {% endif %}
+
+        <!-- Comments 
+        <form class="center-align" method="POST" action=""">
+            <label for="comments">Comments</label>
+            <textarea id="comments" class="materialize-textarea" name="comments" rows="16"></textarea>
+            <a href="" class="btn waves-effect waves-light" type="submit">Publish</a>
+            {% for comment in comments %}
+                <div>
+                    {{ comments.text }}
+                    {{ comments.created_by }}
+                    {{ comments.posted }}
+                </div>
+            {% endfor %} 
+            </form>      -->  
+
 
     {% endblock %}
