--- a/templates/profile.html
+++ b/templates/profile.html
@@ -27,6 +27,7 @@
                                 </div>
                                 <div class="card-content">
                                     <p>{{ recipe.recipe_name }}</p>
+                                    <p>Prep time: {{ recipe.prep_time }}</p>
                                     <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn-small">Edit</a>
                                     <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-large">
                                             Delete <i class="fas fa-times right"></i>
