Add recipe tags on recipe.html and insert to database from add_recipe.html

--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -45,8 +45,9 @@
             </div>
             <!-- Recipe type tags -->
             <div class="row">
-                <div class="chips chips-placeholder col s12">
-                    <input class="custom-class">
+                <div class="chip chips-placeholder col s12" >
+                    <input class="custom-class" id="tags" name="tags" type="text">{{- recipe.tags -}}
+                    <i class="fas fa-times"></i>
                 </div>
             </div>
             <!-- Submit button to update recipe -->
