--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -39,8 +39,9 @@
             </div>
             <!-- Recipe type tags -->
             <div class="row">
-                <div class="chips chips-placeholder col s12">
-                    <input class="custom-class">
+                <div class="chip chips-placeholder col s12" >
+                    <input class="custom-class" id="tags" name="tags" type="text">
+                    <i class="fas fa-times"></i>
                 </div>
             </div>
             <!-- Submit button to create recipe -->
