--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -46,9 +46,11 @@
             <!-- Recipe type tags -->
             <div class="row">
                 <div class="chip chips-placeholder col s12" >
-                    <input class="custom-class" id="tags" name="tags" type="text">{{- recipe.tags -}}
-                    <i class="fas fa-times"></i>
+                    <input class="custom-class" id="tags" name="tags" type="text">
                 </div>
+                    {% for tag in recipe.tags %}
+                        {{ tag }}
+                    {% endfor %}
             </div>
             <!-- Submit button to update recipe -->
             <div class="row">
