--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -3,37 +3,72 @@
 
     <h3 class="center-align">All recipes</h3>
 
+    <div class="card-panel.grey">
+        <form action="{{ url_for('search') }}" method="post" class="col s12">
+            <div class="row valignwrapper centeralign">
+                <div class="input-field col s12 m8">
+                    <i class="fas fa-search prefix"></i>
+                    <input type="text" name="query" minlength="3" id="query" class="validate" required>
+                    <label for="query">Search recipes</label>
+                </div>
+                <div class="col s12 m4">
+                    <a href="{{ url_for('get_recipes') }}" class="red btn">Reset</a>
+                    <button type="submit">
+                        <i class="fas fa-search left"></i> Search
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+
     <div class="row">
+        {% if recipes|length > 0 %}
             <div class="col s4">
+                    <div class="card">
+                             <div class="card-image">
+                                <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="fas fa-plus"></i></a>
+                                <a href="{{ url_for('add_recipe') }}" class="btn">Add recipe</a>
+                            </div>
+                    </div>
+            </div>
+        
+            {% for recipe in recipes %}
+                <div class="col s4">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="images/sample-1.jpg">
+                                <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="fas fa-plus"></i></a>
+                            </div>
+                            <div class="card-content">
+                                <p>{{ recipe.recipe_name }}</p>
+                                <p>Prep time: {{ recipe.prep_time }}</p>
+                                <p><em>Author: {{ recipe.created_by }}</em></p>
+                                {% if session.user|lower == recipe.created_by|lower %}
+                                    <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn-small">Edit</a>
+                                    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-large">
+                                        Delete <i class="fas fa-times right"></i>
+                                    </a>
+                                {% endif %}
+                                <a href="{{ url_for('recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn-small light-green darken-1">View</a>
+                            </div>
+                        </div>
+                </div>
+            {% endfor %}
+        {% else %}
+            <h4 class="center-align red-text">Oops! No results found.</h4>
+            <div class="row">
+                <div class=" col s4"></div>
+                <div class="col s4 center-align">
                         <div class="card">
                                 <div class="card-image">
                                     <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="fas fa-plus"></i></a>
                                     <a href="{{ url_for('add_recipe') }}" class="btn">Add recipe</a>
                                 </div>
                         </div>
+                </div>
+                <div class=" col s4"></div>
             </div>
-        {% for recipe in recipes %}
-            <div class="col s4">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="images/sample-1.jpg">
-                            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="fas fa-plus"></i></a>
-                        </div>
-                        <div class="card-content">
-                            <p>{{ recipe.recipe_name }}</p>
-                            <p>Prep time: {{ recipe.prep_time }}</p>
-                            <p><em>Author: {{ recipe.created_by }}</em></p>
-                            {% if session.user|lower == recipe.created_by|lower %}
-                                <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn-small">Edit</a>
-                                <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-large">
-                                    Delete <i class="fas fa-times right"></i>
-                                </a>
-                            {% endif %}
-                            <a href="{{ url_for('recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn-small light-green darken-1">View</a>
-                        </div>
-                    </div>
-            </div>
-        {% endfor %}
+        {% endif %}
     </div>
          
     
