Add tag addition to add, edit and view recipes

--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -2,7 +2,7 @@
 
     {% block content %}
 
-        <h1 class="center-align">{{ recipe.title }}</h1>
+        <h1 class="center-align">{{ recipe.recipe_name }}</h1>
         
         {% for tag in recipe.tags %}
             <div class="chip">
