--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -39,9 +39,9 @@
             </div>
             <!-- Recipe type tags -->
             <div class="row">
-                <div class="chip chips-placeholder col s12" >
-                    <input class="custom-class" id="tags" name="tags" type="text">
-                    <i class="fas fa-times"></i>
+                <div class="col s12" >
+                    <textarea id="tags" name="tags" class="materialize-textarea" type="text"></textarea>
+                    <label for="tags">Type keywords, or tags, so members can find your recipe. Eg. Italian or Snack. These will appear as tags.</label>
                 </div>
             </div>
             <!-- Submit button to create recipe -->
