--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -45,12 +45,12 @@
             </div>
             <!-- Recipe type tags -->
             <div class="row">
-                <div class="chip chips-placeholder col s12" >
-                    <input class="custom-class" id="tags" name="tags" type="text">
+                <div class="col s12" >
+                    <textarea id="tags" name="tags" class="materialize-textarea" type="text">
+                        {{- recipe.tags|join(", ") -}}
+                    </textarea>
+                    <label for="tags">Type keywords, or tags, so members can find your recipe. Eg. Italian or Snack. These will appear as tags.</label>
                 </div>
-                    {% for tag in recipe.tags %}
-                        {{ tag }}
-                    {% endfor %}
             </div>
             <!-- Submit button to update recipe -->
             <div class="row">
