--- a/templates/base.html
+++ b/templates/base.html
@@ -66,6 +66,40 @@
         {% endwith %}
     </section>
 
+    <footer>
+        <div class="row">
+            <div class="col s12 center-align">
+                    <h5>&#169; COGI 2021</h5>
+                    <!-- Address and contact information-->
+                    <div>
+                        <a href="mailto:cogi@gmail.com" class="fa fa-envelope-open icon"><span class="contactLinks">
+                                Email</span></a><br>
+                        <a href="02921 887 276" class="fa fa-phone icon"><span class="contactLinks"> Phone</span></a><br>
+                        <address>
+                            12 St Marys Street<br>
+                            Cardiff<br>
+                            South Wales
+                        </address>
+                    </div>
+                    <!-- Social Media links -->
+                    <div>
+                        <a href="https://www.facebook.com" class="social" target="_blank">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="hhtps://www.instagram.com" class="social" target="_blank">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="https://www.twitter.com" class="social" target="_blank">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="https://www.pinterest.com" class="social" target="_blank">
+                            <i class="fab fa-pinterest"></i>
+                        </a>
+                    </div>
+            </div>
+        </div>
+    </footer>
+
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" 
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
