--- a/templates/profile.html
+++ b/templates/profile.html
@@ -22,16 +22,13 @@
                     {% if session.user|lower == recipe.created_by|lower %}
                         <div class="col s4">
                             <div class="card">
-                                <div class="card-image">
-                                    <img src="images/sample-1.jpg">
-                                </div>
                                 <div class="card-content">
                                     <p>{{ recipe.recipe_name }}</p>
                                     <p>Prep time: {{ recipe.prep_time }}</p>
-                                    <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn-small">Edit</a>
-                                    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-large">
+                                    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-small">
                                             Delete <i class="fas fa-times right"></i>
                                     </a>
+                                    <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn-small">Edit</a>
                                     <a href="{{ url_for('recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn-small light-green darken-1">View</a>
                                 </div>
                             </div>
