--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -24,30 +24,24 @@
     <div class="row">
         {% if recipes|length > 0 %}
             <div class="col s4">
-                    <div class="card">
-                             <div class="card-image">
-                                <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="fas fa-plus"></i></a>
-                                <a href="{{ url_for('add_recipe') }}" class="btn">Add recipe</a>
-                            </div>
-                    </div>
+                <div class="card">
+                    Add recipe
+                    <a href="{{ url_for('add_recipe') }}" class="btn-floating halfway-fab waves-effect waves-light"><i class="fas fa-plus"></i></a>
+                </div>
             </div>
         
             {% for recipe in recipes %}
-                <div class="col s4">
+                <div class="col s12 m4">
                         <div class="card">
-                            <div class="card-image">
-                                <img src="images/sample-1.jpg">
-                                <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="fas fa-plus"></i></a>
-                            </div>
                             <div class="card-content">
                                 <p>{{ recipe.recipe_name }}</p>
                                 <p>Prep time: {{ recipe.prep_time }}</p>
                                 <p><em>Author: {{ recipe.created_by }}</em></p>
                                 {% if session.user|lower == recipe.created_by|lower %}
-                                    <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn-small">Edit</a>
-                                    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-large">
+                                    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-small">
                                         Delete <i class="fas fa-times right"></i>
                                     </a>
+                                    <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn-small">Edit</a>
                                 {% endif %}
                                 <a href="{{ url_for('recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn-small light-green darken-1">View</a>
                             </div>
