--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,3 +5,32 @@ body {
     font-weight: 300;
     color: #373737;
 }
+
+/*  ---------------------- # homePageImage needs to be changed to mob first and put as media query */ 
+
+ #homePageImage {
+        position: fixed;
+        left: 0px;
+        width: 100vw;
+        height: auto;
+        z-index: -1;
+        background-position-x: 0;
+    }
+
+.callToAction {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    position: relative;
+    flex-flow: column;
+    height: 100vh;
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgba(0,0,0,0.4);
+    margin: 0;
+    padding: 0;
+}
