Add links to third party cookware for marketing to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
                 <a href="{{ url_for('get_recipes') }}">
                     <h3>cooking up a community</h3>
                 </a>
-                <div class="card-panel.white">
+                <div class="card-panel white">
                     <form action="{{ url_for('search') }}" method="post" class="col s12">
                         <div class="row valignwrapper centeralign">
                             <div class="input-field col s12 m8">
@@ -31,6 +31,70 @@
                 </div>
             </div>
         </div> 
+
+        <div class="row">
+            <div class="col s12 m3">
+                <div class="card small">
+                    <div class="card-image">
+                        <img src="https://www.lakeland.co.uk/common/banners/category/hero/2303-cat-hero-ooni-pizza-xl.jpg">
+                    </div>
+                        <div class="card-content">
+                        <p>Lakeland cookware</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://www.lakeland.co.uk/shop/cooking" target="_blank">View here</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col s12 m3">
+                <div class="card small">
+                    <div class="card-image">
+                        <img src="https://i.pinimg.com/originals/12/f4/dd/12f4dd62805bbc9e0cf354c785a2382b.jpg">
+                    </div>
+                        <div class="card-content">
+                        <p>John Lewis</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://www.johnlewis.com/home-garden/cooking-baking/c600001134" target="_blank">Shop now</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col s12 m3">
+                <div class="card small">
+                    <div class="card-image">
+                        <img src="https://www.ikea.com/images/a-guide-to-buying-pots-and-pans-cd4046dc06fc9ad544510d3661e25907.jpg?f=xl">
+                    </div>
+                    <div class="card-content">
+                        <p>Ikea kitchen accessories</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://www.ikea.com/gb/en/cat/cookware-kt003/" target="_blank">Browse cookware</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col s12 m3">
+                <div class="card small">
+                    <div class="card-image">
+                        <img src="https://images.dunelm.com/30689930.jpg?$standardplayerdefault$&img404=noimagedefault">
+                    </div>
+                        <div class="card-content">
+                        <p>Dunelm Cook & Dine</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://www.dunelm.com/category/home-and-furniture/cook-and-dine" target="_blank">Take a look</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+            
+
+            
+
+
 
 
         <!-- TEST 
