--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
     
 
     <footer>
-        <div class="row">
+        <div class="row fadeIn">
             <div class="col s12 center-align">
                     <h5>&#169; COGI 2021</h5>
                     <!-- Address and contact information-->
