--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,14 @@
         </div> 
 
         <div class="row">
+            <div class="col s12 center-align">
+                <p>Cogi is a community of home cooks that want to create and share delicious meals. 
+                    You can search for and follow a recipe you would like to try yourself as well as join our community 
+                    to save and share your own recipes.</p>
+            </div>
+        </div>
+
+        <div class="row fadeIn">
             <div class="col s12 m3">
                 <div class="card small">
                     <div class="card-image">
