Add fade in on scroll

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
             </div>
         </div> 
 
-        <div class="row">
+        <div class="row fadeIn">
             <div class="col s12 center-align">
                 <p>Cogi is a community of home cooks that want to create and share delicious meals. 
                     You can search for and follow a recipe you would like to try yourself as well as join our community 
