--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
             <div class="callToAction">
                 <h1>Cogi</h1>
                 <a href="{{ url_for('get_recipes') }}">
-                    <h3>cooking up a community</h3>
+                    <h3 class="center-align">cooking up a community</h3>
                 </a>
                 <div class="card-panel white">
                     <form action="{{ url_for('search') }}" method="post" class="col s12">
