--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
@@ -41,6 +45,11 @@ body {
 
 #commentUser {
     color: #0093FF;
+}
+
+.footer {
+    background-color: white;
+    z-index: 3;
 }
 
 /*  ---------------------- # Media queries */
