--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,35 +9,40 @@
                     {{ username }}'s recipes
                 </h3>
             </div>
+        </div>
+    </div>
             <div class="row">
-                    <div class="col s4">
-                        <div class="card">
-                                <div class="card-image">
-                                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="fas fa-plus"></i></a>
-                                    <a href="{{ url_for('add_recipe') }}" class="btn">Add recipe</a>
-                                </div>
-                        </div>
+                <div class="col s4">
+                    <div class="card">
+                            <div class="card-image">
+                                <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="fas fa-plus"></i></a>
+                                <a href="{{ url_for('add_recipe') }}" class="btn">Add recipe</a>
+                            </div>
                     </div>
+                </div>
                 {% for recipe in recipes %}
                     {% if session.user|lower == recipe.created_by|lower %}
                         <div class="col s4">
                             <div class="card">
                                 <div class="card-content">
-                                    <p>{{ recipe.recipe_name }}</p>
-                                    <p>Prep time: {{ recipe.prep_time }}</p>
-                                    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-small">
-                                            Delete <i class="fas fa-times right"></i>
-                                    </a>
+                                    <strong><p>{{ recipe.recipe_name }}</p></strong>
+                                    <i class="fas fa-clock" style="float: left; padding-right: 5px; vertical-align: middle;"></i>
+                                    <p>{{ recipe.prep_time }}</p>
+                                    <div>
+                                        {% for tag in recipe.tags %}
+                                            <div class="chip">
+                                                {{ tag }}
+                                            </div>
+                                        {% endfor %}
+                                    </div>
+                                    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn-small red lighten-1">Delete</a>
                                     <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn-small">Edit</a>
                                     <a href="{{ url_for('recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn-small light-green darken-1">View</a>
                                 </div>
                             </div>
                         </div>
                     {% endif %}
-
                 {% endfor %}
             </div>
-        </div>
-    </div>
-
+  
     {% endblock %}
