--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -23,7 +23,7 @@
 
     <div class="row">
         {% if recipes|length > 0 %}
-            <div class="col s4">
+            <div class="col s12 m4">
                 <div class="card">
                     Add recipe
                     <a href="{{ url_for('add_recipe') }}" class="btn-floating halfway-fab waves-effect waves-light"><i class="fas fa-plus"></i></a>
