Add image url input request and post to database

--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -3,6 +3,8 @@
     {% block content %}
 
         <h1 class="center-align">{{ recipe.recipe_name }}</h1>
+
+        <img src="{{ recipe.image_url }}">
         
         {% for tag in recipe.tags %}
             <div class="chip">
