--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -37,11 +37,18 @@
                     <label for="prep_time">Prep time (minutes)</label>
                 </div>
             </div>
-            <!-- Recipe type tags -->
+            <!-- Recipe type tags / this are not required like the other fields by the user -->
             <div class="row">
                 <div class="col s12" >
                     <textarea id="tags" name="tags" class="materialize-textarea" type="text"></textarea>
                     <label for="tags">Type keywords, or tags, so members can find your recipe. Eg. Italian or Snack. These will appear as tags.</label>
+                </div>
+            </div>
+            <!-- Recipe image -->
+            <div class="row">
+                <div class="col s12" >
+                    <textarea id="image_url" name="image_url" class="materialize-textarea" type="text" required></textarea>
+                    <label for="image_url">Please insert a whole image url.</label>
                 </div>
             </div>
             <!-- Submit button to create recipe -->
