--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -52,6 +52,13 @@
                     <label for="tags">Type keywords, or tags, so members can find your recipe. Eg. Italian or Snack. These will appear as tags.</label>
                 </div>
             </div>
+            <!-- Recipe image -->
+            <div class="row">
+                <div class="col s12" >
+                    <textarea id="image_url" name="image_url" class="materialize-textarea" type="text" required>{{ recipe.image_url }}</textarea>
+                    <label for="image_url">Please insert a whole image url.</label>
+                </div>
+            </div>
             <!-- Submit button to update recipe -->
             <div class="row">
                 <div class="col s12 center-align">
