--- a/templates/profile.html
+++ b/templates/profile.html
@@ -24,8 +24,11 @@
                     {% if session.user|lower == recipe.created_by|lower %}
                         <div class="col s12 m4">
                             <div class="card">
+                                <div class="card-image">
+                                    <img src="{{ recipe.image_url }}" alt="{{ recipe.recipe_name }}">
+                                    <span class="card-title">{{ recipe.recipe_name }}</span>
+                                </div>
                                 <div class="card-content">
-                                    <strong><p>{{ recipe.recipe_name }}</p></strong>
                                     <i class="fas fa-clock" style="float: left; padding-right: 5px; vertical-align: middle;"></i>
                                     <p>{{ recipe.prep_time }}</p>
                                     <div>
