Add close option for side navigation

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,7 @@
                         <li><a href="{{ url_for('register') }}">Register</a></li>
                         <li><a href="{{ url_for('login') }}">Log in</a></li>
                     {% endif %}
+                <li><a class="sidenav-close" href="#!"><i class="fas fa-times"></i></a></li>
             </ul>
 
     </header>
