Edit add and edit recipe labels and images

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -19,7 +19,7 @@
                 <div class="input-field col s12">
                     <i class="fas fa-pepper-hot prefix"></i>
                     <textarea id="ingredients" class="materialize-textarea" name="ingredients" rows="16" cols="40" required></textarea>
-                    <label for="ingredients">Ingredients</label>
+                    <label for="ingredients">Ingredients (Please insert one per line Eg. 100g Flour)</label>
                 </div>
             </div>
             <!-- Method text field -->
@@ -27,26 +27,26 @@
                 <div class="input-field col s12">
                     <i class="fas fa-align-left prefix"></i>
                     <textarea id="method" class="materialize-textarea" name="method" rows="16" cols="80" required></textarea>
-                    <label for="method">Method</label>
+                    <label for="method">Method (Please write one step per line)</label>
                 </div>
             </div>
             <!-- Time for cooking prep text field -->
             <div class="row">
                 <div class="input-field col s12">
                     <textarea id="prep_time" class="materialize-textarea" name="prep_time" rows="1" required></textarea>
-                    <label for="prep_time">Prep time (minutes)</label>
+                    <label for="prep_time">Prep time Eg. 1 hour 30 minutes</label>
                 </div>
             </div>
             <!-- Recipe type tags / this are not required like the other fields by the user -->
             <div class="row">
-                <div class="col s12" >
+                <div class="col s12 input-field" >
                     <textarea id="tags" name="tags" class="materialize-textarea" type="text"></textarea>
                     <label for="tags">Type keywords, or tags, so members can find your recipe. Eg. Italian or Snack. These will appear as tags.</label>
                 </div>
             </div>
             <!-- Recipe image -->
             <div class="row">
-                <div class="col s12" >
+                <div class="col s12 input-field" >
                     <textarea id="image_url" name="image_url" class="materialize-textarea" type="text" required></textarea>
                     <label for="image_url">Please insert a whole image url.</label>
                 </div>
