--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -23,30 +23,30 @@
 
     <div class="row">
         {% if recipes|length > 0 %}
-            <div class="col s12 m4">
-                <div class="card">
-                    Add recipe
-                    <a href="{{ url_for('add_recipe') }}" class="btn-floating halfway-fab waves-effect waves-light"><i class="fas fa-plus"></i></a>
+            <div class="col s12 m4" id="create-recipe">
+                        <a href="{{ url_for('add_recipe') }}">
+                            <i class="fas fa-plus"></i>  
+                            <p><strong>Add new recipe</strong></p>
+                        </a>
                 </div>
-            </div>
         
             {% for recipe in recipes %}
                 <div class="col s12 m4">
                         <div class="card">
                             <div class="card-image">
                                 <img src="{{ recipe.image_url }}" alt="{{ recipe.recipe_name }}">
-                                <span class="card-title">{{ recipe.recipe_name }}</span>
                             </div>
                             <div class="card-content">
+                                <p class="card-title"><strong>{{ recipe.recipe_name }}</strong></p>
+                                <div>
+                                    <i class="fas fa-clock" style="float: left; padding-right: 5px; vertical-align: middle;"></i>
+                                    <p>{{ recipe.prep_time }}</p>
+                                </div>
                                 {% for tag in recipe.tags %}
                                     <div class="chip">
                                         {{ tag }}
                                     </div>
                                 {% endfor %}
-                                <div>
-                                    <i class="fas fa-clock" style="float: left; padding-right: 5px; vertical-align: middle;"></i>
-                                    <p>{{ recipe.prep_time }}</p>
-                                </div>
                                 <p><em>Author: {{ recipe.created_by }}</em></p>
                                 {% if session.user|lower == recipe.created_by|lower %}
                                     <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="waves-effect waves-light btn-small">Edit</a>
