Add styling to recipe page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,6 +52,24 @@ body {
     z-index: 3;
 }
 
+/* ------------ have to amend in media query */ 
+
+#page-image {
+    height: 300px;
+    width: 300px;
+    object-fit: cover;
+}
+
+#recipe-time {
+    padding-right: 5px;
+}
+
+#prep-time {
+    display: inline-block;
+}
+
+
+
 .card-image img {
     height: 250px;
     width: 250px;
@@ -95,6 +113,20 @@ body {
     #homePageImage {
         width: 100vw;
         height: auto;
+    }
+
+    #page-image {
+    height: 300px;
+    width: 300px;
+    object-fit: cover;
+    }
+
+    #recipe-time {
+        padding-right: 5px;
+    }
+
+    #prep-time {
+        display: inline-block;
     }
 
 }
