--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -2,43 +2,54 @@
 
     {% block content %}
 
-        <h1 class="center-align">{{ recipe.recipe_name }}</h1>
-
-        <img src="{{ recipe.image_url }}">
-        
-        {% for tag in recipe.tags %}
-            <div class="chip">
-                {{ tag }}
-            </div>
-        {% endfor %}
-
-
-        {{ recipe.prep_time }}
-
         <div class="row">
-            <!-- Placeholder for image -->
-            <div class="col-s12">
-                <h3>Ingredients</h3>
-                <p style="white-space: pre-wrap;">{{ recipe.ingredients }}</p>
+            <div class="col s12 m6 l4">
+                <img src="{{ recipe.image_url }}" id="page-image">
+            </div>
+            <div class="col s12 m6 l8">
+                <h1>{{ recipe.recipe_name }}</h1>
+                {% for tag in recipe.tags %}
+                    <div class="chip">
+                        {{ tag }}
+                    </div>
+                {% endfor %}
+                <i class="fas fa-clock" id="recipe-time"></i><p id="prep-time">{{ recipe.prep_time }}</p>
             </div>
         </div>
 
-        <h3>Method</h3>
-        <p style="white-space: pre-wrap;">{{ recipe.method }}</p>
-        <p>Recipe submitted by: {{ recipe.created_by }}</p>
+        <div class="row">
+            <div class="col s12 m6">
+                <h3>Ingredients</h3>
+                <p style="white-space: pre-wrap;">{{ recipe.ingredients }}</p>
+            </div>
+            <div class="col s12 m6">
+                <h3>Method</h3>
+                <p style="white-space: pre-wrap;">{{ recipe.method }}</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <p>Recipe submitted by: {{ recipe.created_by }}</p>
+        </div>
 
         {% if session.user|lower == recipe.created_by|lower %}
             <div class="row">
-                <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn">Edit Recipe</a>
-                <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn">Delete Recipe</a>
+                <div class="col s12 center-align">
+                    <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn">Edit Recipe</a>
+                    <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="btn">Delete Recipe</a>
+                </div>
             </div>
         {% endif %}
 
-        <form class="center-align" method="POST" action="{{ url_for('add_comment', r_id=recipe._id) }}">
-            <label for="comment">Comments</label>
-            <textarea id="comment" class="materialize-textarea" name="comment" rows="16"></textarea>
-            <button class="btn waves-effect waves-light" type="submit">Publish</button>
-        </form>
+        <div class="row">
+            <div class="col s12 input-field">
+                <form method="POST" action="{{ url_for('add_comment', r_id=recipe._id) }}">
+                    <label for="comment">Comments</label>
+                    <textarea id="comment" class="materialize-textarea" name="comment" rows="16" required></textarea>
+                    <button class="btn waves-effect waves-light" type="submit">Publish</button>
+                </form>
+            </div>
+        </div>
 
         {% for comment in comments %}
             <div>
