--- a/templates/index.html
+++ b/templates/index.html
@@ -5,23 +5,22 @@
 
         <div class="row">
             <div class="overlay">
-                <img src="static/images/soup.jpg" alt="Home cooked soup" id="homePageImage">
+                <img src="static/images/roast.jpg" alt="Home cooked soup" id="homePageImage">
             </div>
             <div class="callToAction">
                 <h1>Cogi</h1>
                 <a href="{{ url_for('get_recipes') }}">
                     <h2 class="center-align">cooking up a community</h2>
                 </a>
-                <div class="card-panel white">
-                    <form action="{{ url_for('search') }}" method="post" class="col s12">
+                <div >
+                    <form action="{{ url_for('search') }}" method="post">
                         <div class="row valignwrapper centeralign">
-                            <div class="input-field col s12 m8">
+                            <div class="input-field col s12">
                                 <i class="fas fa-search prefix"></i>
                                 <input type="text" name="query" minlength="3" id="query" class="validate" required>
                                 <label for="query">Search recipes</label>
                             </div>
-                            <div class="col s12 m4">
-                                <a href="{{ url_for('get_recipes') }}" class="red btn">Reset</a>
+                            <div class="col s12">
                                 <button type="submit">
                                     <i class="fas fa-search left"></i> Search
                                 </button>
@@ -33,20 +32,20 @@
         </div> 
 
         <div class="row fadeIn">
-            <div class="col s12 center-align">
+            <div class="col s12 center-align" id="aboutText">
                 <p>Cogi is a community of home cooks that want to create and share delicious meals. 
                     You can search for and follow a recipe you would like to try yourself as well as join our community 
                     to save and share your own recipes.</p>
             </div>
         </div>
 
-        <div class="row fadeIn">
+        <div class="row fadeIn" id="thirdParty">
             <div class="col s12 m3">
                 <div class="card small">
                     <div class="card-image">
                         <img src="https://www.lakeland.co.uk/common/banners/category/hero/2303-cat-hero-ooni-pizza-xl.jpg">
                     </div>
-                        <div class="card-content">
+                    <div class="card-content">
                         <p>Lakeland cookware</p>
                     </div>
                     <div class="card-action">
@@ -60,7 +59,7 @@
                     <div class="card-image">
                         <img src="https://i.pinimg.com/originals/12/f4/dd/12f4dd62805bbc9e0cf354c785a2382b.jpg">
                     </div>
-                        <div class="card-content">
+                    <div class="card-content">
                         <p>John Lewis</p>
                     </div>
                     <div class="card-action">
@@ -88,7 +87,7 @@
                     <div class="card-image">
                         <img src="https://images.dunelm.com/30689930.jpg?$standardplayerdefault$&img404=noimagedefault">
                     </div>
-                        <div class="card-content">
+                    <div class="card-content">
                         <p>Dunelm Cook & Dine</p>
                     </div>
                     <div class="card-action">
