--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <header>
         <!-- Main Desktop nav bar menu -->
         <div class="navbar-fixed">
-            <nav class="nav-extended yellow darken-2">
+            <nav class="nav-extended brown darken-3">
                 <div class="nav-wrapper">
                     <a href="{{ url_for('get_recipes') }}" class="brand-logo">cogi</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
