--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -37,6 +37,7 @@
             <!-- Time for cooking prep text field -->
             <div class="row">
                 <div class="input-field col s12">
+                    <i class="fas fa-clock prefix"></i>
                     <textarea id="prep_time" class="materialize-textarea" name="prep_time" rows="1" required>
                         {{- recipe.prep_time -}}
                     </textarea>
@@ -46,7 +47,8 @@
             <!-- Recipe type tags -->
             <div class="row">
                 <div class="input-field col s12" >
-                    <textarea id="tags" name="tags" class="materialize-textarea" type="text">
+                    <i class="fas fa-tags prefix"></i>
+                    <textarea id="tags" name="tags" class="materialize-textarea" type="text" required>
                         {{- recipe.tags|join(", ") -}}
                     </textarea>
                     <label for="tags">Type keywords, or tags, so members can find your recipe. Eg. Italian or Snack. These will appear as tags.</label>
@@ -55,6 +57,7 @@
             <!-- Recipe image -->
             <div class="row">
                 <div class="input-field col s12" >
+                    <i class="fas fa-image prefix"></i>
                     <textarea id="image_url" name="image_url" class="materialize-textarea" type="text" required>{{ recipe.image_url }}</textarea>
                     <label for="image_url">Please insert a whole image url.</label>
                 </div>
