Add styling to add recipe option on search and profile page

--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -51,7 +51,7 @@
                     <textarea id="tags" name="tags" class="materialize-textarea" type="text" required>
                         {{- recipe.tags|join(", ") -}}
                     </textarea>
-                    <label for="tags">Type keywords, or tags, so members can find your recipe. Eg. Italian or Snack. These will appear as tags.</label>
+                    <label for="tags">Type keywords (separated by a comma). Eg. Italian or Snack, Brunch. These will appear as tags.</label>
                 </div>
             </div>
             <!-- Recipe image -->
