--- a/static/css/style.css
+++ b/static/css/style.css
@@ -101,7 +101,7 @@ body {
     font-size: 16px;
 }
 
-#create-recipe {
+.create-recipe {
     border: 2px dashed #a1a1a1;
     position: relative;
     display: flex;
