--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -43,7 +43,7 @@
                 <div class="col s12 input-field" >
                     <i class="fas fa-tags prefix"></i>
                     <textarea id="tags" name="tags" class="materialize-textarea" type="text" required></textarea>
-                    <label for="tags">Type keywords, or tags, so members can find your recipe. Eg. Italian or Snack. These will appear as tags.</label>
+                    <label for="tags">Type keywords (separated by a comma). Eg. Italian or Snack, Brunch. These will appear as tags.</label>
                 </div>
             </div>
             <!-- Recipe image -->
