--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,7 +13,7 @@
     </div>
 
             <div class="row">
-                <div class="col s12 m4" id="create-recipe">
+                <div class="col s12 m4 create-recipe">
                         <a href="{{ url_for('add_recipe') }}">
                             <i class="fas fa-plus"></i>  
                             <p><strong>Add new recipe</strong></p>
