--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -23,12 +23,12 @@
 
     <div class="row">
         {% if recipes|length > 0 %}
-            <div class="col s12 m4" id="create-recipe">
+            <div class="col s12 m4 create-recipe">
                         <a href="{{ url_for('add_recipe') }}">
                             <i class="fas fa-plus"></i>  
                             <p><strong>Add new recipe</strong></p>
                         </a>
-                </div>
+            </div>
         
             {% for recipe in recipes %}
                 <div class="col s12 m4">
@@ -59,16 +59,12 @@
         {% else %}
             <h4 class="center-align red-text">Oops! No results found.</h4>
             <div class="row">
-                <div class=" col s4"></div>
-                <div class="col s4 center-align">
-                        <div class="card">
-                                <div class="card-image">
-                                    <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="fas fa-plus"></i></a>
-                                    <a href="{{ url_for('add_recipe') }}" class="btn">Add recipe</a>
-                                </div>
-                        </div>
-                </div>
-                <div class=" col s4"></div>
+                    <div class="col s12 m4 create-recipe center-align">
+                        <a href="{{ url_for('add_recipe') }}">
+                            <i class="fas fa-plus"></i>  
+                            <p><strong>Add new recipe</strong></p>
+                        </a>
+                    </div>
             </div>
         {% endif %}
     </div>
