--- a/templates/base.html
+++ b/templates/base.html
@@ -75,9 +75,9 @@
                     <h5>&#169; COGI 2021</h5>
                     <!-- Address and contact information-->
                     <div>
-                        <a href="mailto:cogi@gmail.com" class="fa fa-envelope-open icon"><span class="contactLinks">
+                        <a href="mailto:cogi@gmail.com"><i class="fa fa-envelope-open icon"></i><span class="contactLinks">
                                 Email</span></a><br>
-                        <a href="02921 887 276" class="fa fa-phone icon"><span class="contactLinks"> Phone</span></a><br>
+                        <a href="02921 887 276"><i class="fa fa-phone icon"></i><span class="contactLinks"> Phone</span></a><br>
                         <address>
                             12 St Marys Street<br>
                             Cardiff<br>
