Add for loop to only show 2 tags on recipe cards

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -33,9 +33,11 @@
                                     <p>{{ recipe.prep_time }}</p>
                                     <div>
                                         {% for tag in recipe.tags %}
-                                            <div class="chip">
-                                                {{ tag }}
-                                            </div>
+                                            {% if loop.index < 3 %}
+                                                <div class="chip">
+                                                    {{ tag }}
+                                                </div>
+                                            {% endif %} 
                                         {% endfor %}
                                     </div>
                                     <!--  Buttons testing
