Add all recipes link to homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
                                 <button type="submit" id="homePageSearch">
                                     Find recipe
                                 </button>
+                                <p class="seeAllRecipes"><a href="{{ url_for('get_recipes') }}">see all recipes</a></p>
                             </div>
                         </div>
                     </form>
