--- a/static/css/style.css
+++ b/static/css/style.css
@@ -160,6 +160,19 @@ footer a:hover {
     color: #fff;
 }
 
+.seeAllRecipes a {
+    color:#555;
+    text-decoration: none;
+}
+
+.seeAllRecipes {
+    text-align: center;
+}
+
+.seeAllRecipes a:hover {
+    color: #6a5acd;
+}
+
 
 /*  ---------------------- # Media queries */
 
