Add alt text to index page images

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
             <div class="col s12 m3">
                 <div class="card small">
                     <div class="card-image">
-                        <img src="https://www.lakeland.co.uk/common/banners/category/hero/2303-cat-hero-ooni-pizza-xl.jpg">
+                        <img src="https://www.lakeland.co.uk/common/banners/category/hero/2303-cat-hero-ooni-pizza-xl.jpg" alt="Lakeland cookware">
                     </div>
                     <div class="card-content">
                         <p><strong>Lakeland cookware</strong></p>
@@ -57,7 +57,7 @@
             <div class="col s12 m3">
                 <div class="card small">
                     <div class="card-image">
-                        <img src="https://i.pinimg.com/originals/12/f4/dd/12f4dd62805bbc9e0cf354c785a2382b.jpg">
+                        <img src="https://i.pinimg.com/originals/12/f4/dd/12f4dd62805bbc9e0cf354c785a2382b.jpg" alt="John Lewis">
                     </div>
                     <div class="card-content">
                         <p><strong>John Lewis</strong></p>
@@ -70,7 +70,7 @@
             <div class="col s12 m3">
                 <div class="card small">
                     <div class="card-image">
-                        <img src="https://www.ikea.com/images/a-guide-to-buying-pots-and-pans-cd4046dc06fc9ad544510d3661e25907.jpg?f=xl">
+                        <img src="https://www.ikea.com/images/a-guide-to-buying-pots-and-pans-cd4046dc06fc9ad544510d3661e25907.jpg?f=xl" alt="Ikea kitchenware">
                     </div>
                     <div class="card-content">
                         <p><strong>Ikea kitchenware</strong></p>
@@ -83,7 +83,7 @@
             <div class="col s12 m3">
                 <div class="card small">
                     <div class="card-image">
-                        <img src="https://images.dunelm.com/30689930.jpg?$standardplayerdefault$&img404=noimagedefault">
+                        <img src="https://images.dunelm.com/30689930.jpg?$standardplayerdefault$&img404=noimagedefault" alt="Dunelm cookware">
                     </div>
                     <div class="card-content">
                         <p><strong>Dunelm Cook & Dine</strong></p>
